umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_indigo_Query_for_check.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 61
bond_count: 60
sum_formula: C54BFNOS+2
graph6: "|hCGGC@?G?_@?@??_?G?@??C??G??G??C??G???G???_??@???@????_??@????@????C????G????G????C????@?????G????O?????@?????@?????_?C??????????@??????C?C????@??????????_?????????@???????G???????_??????@???????@????????_???????G???????@????????C????????G????????G????????C????????@?????????G???????C?????????@??????????_"
