umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_indigo_cip_high_load.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 36
bond_count: 35
sum_formula: C36
graph6: chCGGC@?G?_@?@??_?G?@O??_??_??O??A???O??@???A???@????_???G????_?????C????G?@???????O????O??C???G?????@????
