umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_indigo_complexring2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 56
bond_count: 64
sum_formula: C56
graph6: "wsO__WA?_A?C?C?A??o?A??O??_??_??O??C???o??@???C???C???A????_???C????W????O????_????O????C?????_????A?????E?????A?????A??????_?????C??????O??????_??????o??????G??????C???????_??????A???????C???????C???????B????????O???????C????????O????????_????????_????????["
